--- a/index.html
+++ b/index.html
@@ -3,68 +3,255 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Scryfall Stats — Bookmarklet</title>
+  <title>Scryfall Stats</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
-    body { font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Arial,sans-serif; margin:0; background:#0f1724; color:#e6eef8; display:flex; align-items:center; justify-content:center; min-height:100vh }
-    .card { background:#0b1220; padding:24px; border-radius:10px; box-shadow:0 6px 24px rgba(2,6,23,0.6); max-width:680px; width:100% }
-    a.bookmarklet { display:inline-block; background:#0ea5a4; color:#042023; padding:10px 16px; border-radius:8px; font-weight:600; text-decoration:none }
-    button.copy { margin-left:12px; padding:10px 14px; background:#06b6d4; color:#042023; border:0; border-radius:8px; font-weight:600; cursor:pointer }
-    .muted{ color:#9fb0c9; font-size:0.95rem }
-    .hint{ margin-top:12px; font-size:0.9rem }
-    .footer{ margin-top:16px; color:#7f98b0; font-size:0.9rem }
-    pre { background:#031023; padding:12px; border-radius:8px; overflow:auto }
+    :root { --bg-color: #0f172a; --card-bg-color: #1e293b; --text-color: #e2e8f0; --muted-text-color: #94a3b8; --accent-color: #22d3ee; }
+    body { background-color: var(--bg-color); color: var(--text-color); }
+    .stat-card { background-color: var(--card-bg-color); padding: 1.5rem; border-radius: 0.5rem; }
+    .table-wrapper { max-height: 400px; overflow-y: auto; }
+    .table-wrapper::-webkit-scrollbar { width: 10px; background: #232f45; }
+    .table-wrapper::-webkit-scrollbar-thumb { background: #60a5fa; border-radius: 6px; }
+    table { color: #f1f5f9; }
+    th { color: #bae6fd; font-weight: 700; background: #1e293b; }
+    td { color: #e0e7ef; font-size: 1.05em; }
+    td.count-cell { font-weight: bold; color: #38bdf8; }
+    tr.data-row:hover { background: #22304a; }
   </style>
 </head>
-<body>
-  <main class="card">
-    <h1 style="margin:0 0 8px 0">Scryfall Search Stats</h1>
-    <p class="muted">Install the bookmarklet by dragging the button to your bookmarks bar, or copy the code and create a new bookmark manually.</p>
+<body class="antialiased font-sans">
 
-    <div style="margin-top:16px" class="muted">
-      <a id="bookmarklet" class="bookmarklet" href="#">Scryfall Stats</a> <- drag this to bookmark bar
+  <!-- Landing Page View -->
+  <div id="landing-page">
+    <header class="bg-slate-900/50 backdrop-blur-sm border-b border-slate-800 sticky top-0 z-10">
+      <div class="container mx-auto px-4">
+        <div class="flex items-center justify-between h-16">
+          <h1 class="text-xl font-bold text-cyan-400">MTGMetrics</h1>
+          <a href="https://github.com/MohnishKalia/MTGMetrics" class="text-slate-400 hover:text-cyan-400">GitHub</a>
+        </div>
+      </div>
+    </header>
+
+    <main class="container mx-auto px-4">
+      <!-- Hero Section -->
+      <section class="text-center py-20 sm:py-32">
+        <h1 class="text-4xl sm:text-6xl font-extrabold text-white tracking-tight">Powerful Stats for Your Scryfall Searches</h1>
+        <p class="mt-6 max-w-2xl mx-auto text-lg text-slate-400">Unlock deep insights into Magic: The Gathering card data directly from Scryfall. Use our bookmarklet for instant analysis.</p>
+        <div class="mt-8 flex justify-center gap-4">
+          <a id="bookmarklet" href="#" class="inline-block bg-cyan-500 hover:bg-cyan-600 text-slate-900 font-bold py-3 px-6 rounded-lg">Scryfall Stats</a>
+        </div>
+        <p class="mt-4 text-sm text-slate-500">Drag the "Scryfall Stats" button to your bookmarks bar.</p>
+      </section>
+
+      <!-- How to Use Section -->
+      <section class="py-12">
+        <div class="max-w-4xl mx-auto">
+          <h2 class="text-3xl font-bold text-center text-white">How It Works</h2>
+          <div class="mt-8 grid md:grid-cols-2 gap-8 text-slate-300">
+            <div class="bg-slate-800 p-6 rounded-lg">
+              <h3 class="text-xl font-bold text-cyan-400 mb-2">1. Install the Bookmarklet</h3>
+              <p>Drag the "Scryfall Stats" button above to your browser's bookmarks bar. Alternatively, click "Copy Code" and paste it into the URL field of a new bookmark.</p>
+              <pre id="snippet" class="hidden"></pre>
+            </div>
+            <div class="bg-slate-800 p-6 rounded-lg">
+              <h3 class="text-xl font-bold text-cyan-400 mb-2">2. Analyze a Search</h3>
+              <p>On any Scryfall search results page, click your new bookmark. A dialog will appear with a quick summary. For a deep dive, click the link in the dialog to open the full analysis here.</p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+  </div>
+
+  <!-- Stats Display View -->
+  <div id="stats-display" class="w-full max-w-7xl mx-auto p-2 sm:p-4 hidden">
+    <div class="flex justify-between items-center mb-2 sm:mb-4">
+      <h1 class="text-2xl sm:text-3xl font-bold text-white">Scryfall Query Analysis</h1>
+      <a href="/MTGMetrics/" class="text-cyan-400 hover:underline">&larr; Back</a>
     </div>
+    <p id="loading" class="text-base sm:text-lg text-slate-400">Fetching data, please wait...</p>
+    <div id="stats-results" class="hidden flex flex-col gap-4 sm:gap-6">
+      <!-- Stats will be rendered here -->
+    </div>
+  </div>
 
-    <p class="hint">The bookmarklet code is now self-contained to avoid CSP issues.</p>
-
-    <details style="margin-top:12px">
-        <summary class="muted" style="cursor:pointer">
-        Bookmarklet code (click to expand)
-        <button id="copy" class="copy">Copy Bookmarklet</button>          
-        </summary>
-      <pre id="snippet"></pre>
-    </details>
-
-    <a class="footer" href="https://scryfall.com/docs/api">Scryfall API Documentation</a>
-  </main>
-
+  <script src="stats.js"></script>
   <script src="bookmarklet.js"></script>
   <script>
-    // Provide the default snippet and wire the buttons.
+    // --- Bookmarklet Setup ---
     const snippet = `javascript:(${bookmarklet.toString()})()`;
+  document.getElementById('bookmarklet').href = snippet;
+  document.getElementById('snippet').textContent = snippet;
 
-    const link = document.getElementById('bookmarklet');
-    link.href = snippet;
-    link.setAttribute('title','Drag to bookmarks or right-click -> Add to bookmarks');
+    // --- Stats Display ---
+    window.addEventListener('load', async () => {
+      const params = new URLSearchParams(window.location.search);
+      const query = params.get('q');
 
-    const copyBtn = document.getElementById('copy');
-    const snippetEl = document.getElementById('snippet');
-    snippetEl.textContent = snippet;
+      if (query) {
+        document.getElementById('landing-page').classList.add('hidden');
+        document.getElementById('stats-display').classList.remove('hidden');
+        
+        const loadingEl = document.getElementById('loading');
+        const resultsEl = document.getElementById('stats-results');
 
-    copyBtn.addEventListener('click', async () => {
-      try {
-        if (navigator.clipboard && window.isSecureContext) {
-          await navigator.clipboard.writeText(snippet);
-        } else {
-          const t = document.createElement('textarea'); t.value = snippet; document.body.appendChild(t); t.select(); document.execCommand('copy'); document.body.removeChild(t);
+        try {
+          const apiUrl = `https://api.scryfall.com/cards/search?q=${encodeURIComponent(query)}`;
+          const { cards } = await fetchAllCards(apiUrl, (progress) => {
+            loadingEl.textContent = progress;
+          });
+
+          loadingEl.classList.add('hidden');
+          resultsEl.classList.remove('hidden');
+
+          const stats = processCards(cards);
+          const totalCards = cards.length;
+          
+          const rarityOrder = { 'mythic': 1, 'rare': 2, 'uncommon': 3, 'common': 4, 'special': 5, 'bonus': 6 };
+
+          renderStatSection('rarity', 'Rarity Distribution', stats.rarityCounts, totalCards, (a, b) => (rarityOrder[a[0]] || 99) - (rarityOrder[b[0]] || 99));
+          renderStatSection('cmc', 'Mana Curve (CMC)', stats.cmcCounts, totalCards, (a, b) => Number(a[0]) - Number(b[0]));
+          renderStatSection('identity', 'Color Identity', stats.identityCounts, totalCards);
+          renderStatSection('type', 'Card Types', stats.typeCounts, totalCards);
+          renderStatSection('keyword', 'Keywords', stats.keywordCounts, totalCards);
+          renderStatSection('creature-type', 'Creature Types', stats.creatureTypeCounts, totalCards);
+
+        } catch (error) {
+          loadingEl.textContent = `Error: ${error.message}`;
+          loadingEl.classList.add('text-red-400');
         }
-        copyBtn.textContent = 'Copied!';
-        copyBtn.disabled = true;
-        setTimeout(()=>{ copyBtn.textContent='Copy Bookmarklet'; copyBtn.disabled=false },1600);
-      } catch (err) {
-        alert('Could not copy automatically. Select and copy the code from the box.');
       }
     });
+
+    function renderStatSection(id, title, data, total, sortFn) {
+      if (Object.keys(data).length === 0) return;
+
+      const container = document.createElement('section');
+      container.id = `${id}-section`;
+      container.className = 'stat-card p-3 sm:p-4';
+
+      const sortedData = Object.entries(data).sort(sortFn || ((a, b) => b[1] - a[1]));
+      let uniqueCount = sortedData.length;
+      let sum = sortedData.reduce((acc, [, count]) => acc + count, 0);
+
+      let tableHtml = `<div class="table-wrapper"><table class="w-full text-xs sm:text-sm text-slate-300"><thead><tr class="border-b border-slate-600"><th class="p-1 sm:p-2">Item</th><th class="p-1 sm:p-2">Count</th><th class="p-1 sm:p-2">% of Total</th></tr></thead><tbody>`;
+        for (const [key, count] of sortedData) { 
+        const percentage = ((count / total) * 100).toFixed(2);
+          tableHtml += `<tr class="border-b border-slate-700 data-row"><td class="p-1 sm:p-2">${key}</td><td class="p-1 sm:p-2 count-cell">${count}</td><td class="p-1 sm:p-2">${percentage}%</td></tr>`;
+      }
+      tableHtml += `</tbody><tfoot><tr class="border-t border-slate-600 font-bold"><td class="p-1 sm:p-2">Total Unique</td><td class="p-1 sm:p-2">${uniqueCount}</td><td class="p-1 sm:p-2">Sum: ${sum}</td></tr></tfoot></table></div>`;
+
+      // make sections collapsible; collapse keywords and creature-type by default
+      const collapsedByDefault = new Set(['creature-type', 'keyword']);
+      const isOpen = !collapsedByDefault.has(id);
+      container.innerHTML = `
+        <details class="group" ${isOpen ? 'open' : ''}>
+          <summary class="cursor-pointer select-none py-2 px-1 sm:px-2 rounded-md hover:bg-slate-800 flex items-center justify-between">
+            <h2 class="text-xl sm:text-2xl font-bold text-white">${title}</h2>
+            <span class="text-sm text-slate-400">${sortedData.length} items</span>
+          </summary>
+          <div class="mt-3">
+            <div class="flex flex-col md:flex-row gap-4 items-start">
+              <div class="w-full md:w-1/2 min-w-0">${tableHtml}</div>
+              <div class="w-full md:w-1/2 flex justify-center items-center"><canvas id="${id}-chart" style="max-width:100%"></canvas></div>
+            </div>
+          </div>
+        </details>
+      `;
+
+      document.getElementById('stats-results').appendChild(container);
+      createChart(`${id}-chart`, title, sortedData);
+    }
+
+    function createChart(canvasId, label, data) {
+      const canvas = document.getElementById(canvasId);
+      const ctx = canvas.getContext('2d');
+      const labels = data.map(d => d[0]);
+      const values = data.map(d => d[1]);
+      // Color palettes
+      const colorIdentityPalette = {
+        W: '#fffbe6', U: '#b4d6f7', B: '#b8b8b8', R: '#f7b4a8', G: '#b7e2b1',
+        WU: '#c7e6fa', WB: '#e6e6d6', UB: '#b8c8d8', UR: '#f7d6b4', UG: '#b4f7d6',
+        BR: '#f7b4d6', BG: '#d6f7b4', RG: '#f7e6b4', RW: '#f7e6d6', GW: '#e6f7b4',
+        GU: '#b4e6f7', RWU: '#e6e6fa', RUG: '#b4f7e6', WUB: '#d6e6f7', WBR: '#f7d6e6',
+        UBR: '#b4d6f7', BRG: '#d6f7b4', RGW: '#f7e6b4', GWU: '#b4e6f7', WUBR: '#e6d6f7',
+        UBRG: '#b4f7e6', WUBRG: '#f7f7b4', C: '#e0e7ef'
+      };
+      const cardTypePalette = {
+        artifact: '#b8b8d0',
+        battle: '#f87171',
+        conspiracy: '#fbbf24',
+        creature: '#4ade80',
+        dungeon: '#a3a3a3',
+        enchantment: '#f472b6',
+        instant: '#60a5fa',
+        kindred: '#facc15',
+        land: '#fde68a',
+        phenomenon: '#818cf8',
+        plane: '#fcd34d',
+        planeswalker: '#f59e42',
+        scheme: '#f472b6',
+        sorcery: '#f87171',
+        vanguard: '#a3e635',
+        // supertype colors
+        legendary: '#ffd700',
+        snow: '#38bdf8',
+        token: '#94a3b8',
+        emblem: '#a1a1aa',
+      };
+      const rarityPalette = {
+        mythic: '#ff6f1b',
+        rare: '#ffd700',
+        uncommon: '#bfc1c2',
+        common: '#22272b',
+        'basic land': '#ffffff'
+      };
+
+      // Set canvas height so Chart.js doesn't skip y-axis labels
+      const pxPerLabel = 28;
+      const minH = 120;
+      const maxH = 1200;
+      const desiredH = Math.min(maxH, Math.max(minH, labels.length * pxPerLabel));
+      canvas.height = desiredH;
+
+      let backgroundColor = 'rgba(34, 211, 238, 0.6)';
+      if (canvasId.startsWith('identity')) {
+        backgroundColor = labels.map(l => colorIdentityPalette[l] || '#38bdf8');
+      } else if (canvasId.startsWith('type')) {
+        backgroundColor = labels.map(l => cardTypePalette[l.toLowerCase()] || '#38bdf8');
+      } else if (canvasId.startsWith('rarity')) {
+        backgroundColor = labels.map(l => rarityPalette[l.toLowerCase()] || '#38bdf8');
+      }
+
+      new Chart(ctx, {
+        type: 'bar',
+        data: {
+          labels: labels,
+          datasets: [{
+            label: 'Count',
+            data: values,
+            backgroundColor: backgroundColor,
+            borderColor: 'rgba(34, 211, 238, 1)',
+            borderWidth: 1
+          }]
+        },
+        options: {
+          indexAxis: 'y',
+          responsive: true,
+          maintainAspectRatio: false,
+          plugins: {
+            legend: { display: false },
+            title: { display: false },
+            tooltip: { mode: 'index', intersect: false }
+          },
+          scales: {
+            x: { ticks: { color: '#e0e7ef', font: {size: 12} }, grid: { color: 'rgba(255,255,255,0.06)' } },
+            y: { ticks: { color: '#e0e7ef', font: {size: 12}, autoSkip: false }, grid: { display: false } }
+          }
+        }
+      });
+    }
   </script>
 </body>
 </html>
-
